cmake_minimum_required(VERSION 2.8.12)
project(cmake_wrapper)

if(EXISTS "${CMAKE_BINARY_DIR}/conanbuildinfo.cmake")
  include("${CMAKE_BINARY_DIR}/conanbuildinfo.cmake")
else()
  include(conanbuildinfo.cmake)
endif()
conan_basic_setup()

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/source_subfolder/cmake")
add_subdirectory("source_subfolder")
